# moonhopper

./: .gitignore  CMakeLists.txt  README  moonhopper.sh
cmake/modules/: FindGLFW.cmake  FindGLFW3.cmake
resources/: CMakeLists.txt  avatar.ani  default.cfg  parameters.cfg
src/: AABB.cpp  AABB.h  Animation.cpp  Animation.h  AnimationFrame.h  Animation_TestSuite.cpp  Animation_TestSuite.h  ArgumentHandler.cpp  ArgumentHandler.h  Avatar.cpp  Avatar.h  CMakeLists.txt  CollisionDetection.cpp  CollisionDetection.h  CollisionResolution.cpp  CollisionResolution.h  DataStore.cpp  DataStore.h  Engine.cpp  Engine.h  GLFW.cpp  GLFW.h  Hook.h  MathUtils.h  Moon.h  PeriodicDomain.cpp  PeriodicDomain.h  PeriodicDomain_TestSuite.cpp  PeriodicDomain_TestSuite.h  PeriodicSpatialTree.cpp  PeriodicSpatialTree.h  PeriodicSpatialTree_TestSuite.cpp  PeriodicSpatialTree_TestSuite.h  Ray.h  Renderer.cpp  Renderer.h  RendererContext.cpp  RendererContext.h  TestDriver.cpp  TestDriver.h  (+14 more)
tinyxml/: CMakeLists.txt
